# NotificationManager

./: .gitignore  CMakeLists.txt  README.md
example1/: NotificationId.h  main.cpp
example2/: NotificationId.h  agent.h  main.cpp
example3/: NotificationId.h  main.cpp
notifications/: Delegate.h  NotificationId.h  NotificationManager.cpp  NotificationManager.h
notifications/any/: any.h  indi_any.h
